# BookmarkOrganizer

./: .env.example  .gitignore  PLAN.md  PROGRESS.md  README.md  build.sh  docker-compose.yml  pyproject.toml  quartz.config.yaml
bot/: telegram_bot.py
core/: markdown_writer.py  metadata.py
docker/: Dockerfile
scraper/: runner.py  twitter.py
tests/: test_bot.py  test_markdown_writer.py  test_metadata.py  test_scraper.py
vault/: README.md
vault/.obsidian/: app.json
vault/tags/: article.md  design.md  dev.md  tool.md  twitter.md  video.md
