[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark-organizer"
version = "0.1.0"
description = "Aggregate Twitter/X bookmarks and Telegram-forwarded links into an Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.7.0",
    "python-slugify>=8.0.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["core", "scraper", "bot"]
